Fix: class names, size and alignment of texts

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,15 +66,13 @@ body {
   color: transparent;
   text-transform: uppercase;
   text-align: center;
-  margin-bottom: 30px;
+  padding: 50px;
   font-family: "Kenia", sans-serif;
   font-family: "Mukta", sans-serif;
   font-family: "Nosifer", sans-serif;
   position: relative;
   overflow: hidden;
-  text-shadow: 2px 2px 4px #fafafa; /* Text shadow for a spooky effect */
-  /* animation: glow 1.5s ease-in-out infinite;  */
-  /* Adding a glowing animation */
+  text-shadow: 2px 2px 4px #fafafa; 
 }
 .main-title:hover {
   animation: glow 1.5s ease-in-out infinite;
@@ -94,9 +92,6 @@ body {
   content: "";
   position: absolute;
   bottom: -10px;
-  background: url(fire.gif);
-  background-repeat: no-repeat;
-  background-size: cover;
   color: #ff0000;
   width: 140px;
   height: 150px;
@@ -166,37 +161,41 @@ a {
   display: none;
 }
 
-.modal {
-  z-index: 2;
-  position: absolute;
-  background-color: white;
-  max-width: 900px;
-  border: 3px solid #f2f2f2;
-  border-radius: 40px;
-  box-shadow: 6px 6px 12px #505050;
-  margin: 20px;
-  padding: 30px;
-}
-.modal h2 {
+.rules-content-title {
+  margin-bottom: 20px;
   text-align: center;
-  font-size: 3.5rem;
 }
 
-.modal h3 {
-  font-family: "Handjet";
-  font-size: 2.5rem;
-  letter-spacing: 2px;
+.game-info {
+  margin: 10px;
 }
-.modal p {
+
+.game.info p {
   font-family: sans-serif;
   font-size: 1.6rem;
   line-height: 1.3;
   margin: 10px 0;
 }
 
+.game-rules {
+  padding: 10px;
+}
+
+.game-rules p {
+  font-family: sans-serif;
+  font-size: 1.6rem;
+  line-height: 1.3;
+  margin: 10px 0;
+  padding-top: .5px;
+}
+
 .play-game .btn {
   width: 7em;
   height: 3em;
+  font-size: 1.1rem;
+  font-weight: 600;
+  color: #ff4d00;
+  cursor: pointer;
 }
 
 .play-game .btn:before {
